# RubiksCube-OpenGL

./: CMakeLists.txt  main.cpp
